--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
             "program": "${workspaceFolder}/Spark/TTS.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--mode", "batch", "--input", "data/arXiv-2106.04624v1/main.tex", "--output", "output/"],
+            "args": ["--mode", "batch_empty", "--input", "data/arXiv-2106.04624v1/main.tex", "--output", "output/"],
             "cwd": "${workspaceFolder}"
         },
         {
