add support for multiple output types more configs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,9 @@
             "args": ["--mode", "stream", 
             "--kafka-topic", "articles", 
             "--kafka-servers", "localhost:9092",
-            "--output-type", "fs"],
+            "--output-type", "fs",
+            "--output-type", "parquet",
+            "--output", "output/"],
             "cwd": "${workspaceFolder}"
         }
     ]
