fixed paragraph postprocessing and chunking add csv output batch processing with wholeTextFile save intermediate output use persist to avoid re-calculation separate text preprocessing multi-output in batch mode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,11 @@
             "program": "${workspaceFolder}/Spark/TTS.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--mode", "batch_empty", "--input", "data/arXiv-2106.04624v1/main.tex", "--output", "output/"],
+            "args": ["--mode", "batch", 
+            "--input", "data/arXiv-2106.04624v1/main.tex", 
+            "--output-type", "fs",
+            "--output-type", "csv",
+            "--output", "output/"],
             "cwd": "${workspaceFolder}"
         },
         {
